--- a/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
+++ b/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
@@ -23,10 +23,8 @@ Get Open VSX sources and navigate to the OpenShift deploy directory:
 +
 [bash,subs="verbatim",options="nowrap"]
 ----
-git clone https://github.com/svor/openvsx.git &&
-cd openvsx &&
-git checkout sv-update-os-deployment &&
-cd deploy/openshift
+git clone https://github.com/eclipse/openvsx.git &&
+cd openvsx/deploy/openshift
 ----
 
 . Prepare Open VSX server image.
