--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -19,7 +19,7 @@ Follow the instructions below to deploy and configure an on-premises Eclipse Ope
 
 . Start a workspace using the Open VSX repository.
 +
-Create a workspace by using the following link:https://github.com/svor/openvsx/tree/sv-update-os-deployment[Eclipse Open VSX repository].
+Create a workspace by using the following link:https://github.com/eclipse/openvsx[Eclipse Open VSX repository].
 +
 [TIP]
 ====
