fix: use cluster admin instead of admin
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -13,7 +13,7 @@ Follow the instructions below to deploy and configure an on-premises Eclipse Ope
 
 .Prerequisites
 
-* Be logged in to a {prod-short} as an administrator.
+* Be logged in to a {prod-short} as a cluster administrator.
 
 .Procedure
 
