--- a/modules/end-user-guide/pages/url-parameter-for-the-existing-workspace-name.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-existing-workspace-name.adoc
@@ -9,7 +9,7 @@
 
 If you start a new workspace with a URL that contains the `existing` URL parameter specifying an existing workspace name, the existing workspace created from the same URL is opened.
 
-When specifying the `existing` URL parameter, several situations may arise:
+When specifying the `existing` URL parameter, following situations may arise:
 
 1. No workspaces created from the same URL, and a new workspace is created.
 
