--- a/modules/end-user-guide/pages/url-parameter-for-the-existing-workspace-name.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-existing-workspace-name.adoc
@@ -11,13 +11,13 @@ If you start a new workspace with a URL that contains the `existing` URL paramet
 
 When specifying the `existing` URL parameter, following situations may arise:
 
-1. No workspaces created from the same URL, and a new workspace is created.
+* If there is no workspace created from the same URL, a new workspace is created.
 
-2. The specified existing workspace name may not match any existing workspaces, and a warning will appear, in which you will need to select one of the following actions:
- - Create a new workspace.
- - Select an existing workspace to open.
+* If the specified existing workspace name matches an existing workspace created from the same URL and the existing workspace is opened.
 
-3. The specified existing workspace name may match one of the existing workspaces created from the same URL; the existing workspace is opened.
+* If the specified existing workspace name does not match any existing workspaces, a warning appears and you need to select one of the following actions:
+ ** Create a new workspace.
+ ** Select an existing workspace to open.
 
 [NOTE]
 ====
