--- a/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
+++ b/modules/administration-guide/examples/snip_che-deploy-open-vsx-using-oc.adoc
@@ -1,6 +1,6 @@
 * Installed `oc` and git tools.
 * Installed Podman.
-* Log in to the OpenShift cluster where a {prod-short} is deployed as a cluster administrator.
+* Log in to the OpenShift cluster where the {prod-short} is deployed as a cluster administrator.
 +
 [TIP]
 ====
