--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -13,7 +13,7 @@ Follow the instructions below to deploy and configure an on-premises Eclipse Ope
 
 .Prerequisites
 
-* Be logged in to {prod-short} as a cluster administrator.
+* Be logged in as a cluster administrator.
 
 .Procedure
 
