Updated a fix for Pantheon

--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -23,11 +23,11 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<editor_key>__
 ----
 +
 
-.The URL parameter `__<editor_key>__` values for supported IDEs
+.The URL parameter `<editor_key>` values for supported IDEs
 
 [cols="1,1a,1a,1a"]
 |===
-| IDE | Status | `__<editor_key>__` value | Note
+| IDE | Status | `editor_key` value | Note
 
 | link:https://github.com/che-incubator/che-code[Microsoft Visual Studio Code - Open Source]
 | Available
