chore: add warning message about starting openvsx workspace
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>
(cherry picked from commit cd69d059c1e7204274476c9b46a825d59aaf6905)

--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -21,6 +21,11 @@ Follow the instructions below to deploy and configure an on-premises Eclipse Ope
 +
 Create a workspace by using the following link:https://github.com/eclipse/openvsx[Eclipse Open VSX repository].
 +
+[WARNING]
+====
+The link:https://github.com/eclipse/openvsx/blob/master/.devfile.yaml[.devfile.yaml] includes an `elasticsearch` component that does not support IBM Power (ppc64le) or IBM Z (s390x) architectures. To successfully start the workspace on these architectures, the only option is to remove this component from the devfile. Alternatively, you can refer to  <<using-oc-tool,Using OpenShift CLIT tool>> documentation, which describes how to run Open VSX separately without starting a workspace.
+====
++
 [TIP]
 ====
 The environment, including all necessary commands, is defined in the `.devfile.yaml` file.
@@ -66,6 +71,7 @@ To publish your extensions to Open VSX, update the `extensions.txt` file as need
 +
 Start any workspace and check the available extensions in the Extensions view of the workspace IDE or by opening the `internal` route in the OpenVSX OpenShift project.
 
+[id="using-oc-tool"]
 == Using OpenShift CLI (`oc`) tool
 
 .Prerequisites
