--- a/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
+++ b/modules/administration-guide/pages/running-the-open-vsx-on-premises.adoc
@@ -23,7 +23,7 @@ Create a workspace by using the following link:https://github.com/eclipse/openvs
 +
 [WARNING]
 ====
-The link:https://github.com/eclipse/openvsx/blob/master/.devfile.yaml[.devfile.yaml] includes an `elasticsearch` component that does not support IBM Power (ppc64le) or IBM Z (s390x) architectures. To successfully start the workspace on these architectures, the only option is to remove this component from the devfile. Alternatively, you can refer to  <<using-oc-tool,Using OpenShift CLIT tool>> documentation, which describes how to run Open VSX separately without starting a workspace.
+The link:https://github.com/eclipse/openvsx/blob/master/.devfile.yaml[.devfile.yaml] includes an `elasticsearch` component that does not support IBM Power (ppc64le) or IBM Z (s390x) architectures. To successfully start the workspace on these architectures, the only option is to remove this component from the devfile. Alternatively, you can refer to  <<using-oc-tool,Using OpenShift CLI tool>> documentation, which describes how to run Open VSX separately without starting a workspace.
 ====
 +
 [TIP]
