Add the storage requirements for the JetBrains editors
Signed-off-by: Artem Zatsarynnyi <azatsary@redhat.com>

--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -21,6 +21,11 @@ Integration with the link:https://www.jetbrains.com/remote-development/gateway/[
 The `oc login` command establishes the authenticated session and saves the connection information to the configuration file which is read by the Gateway provider for OpenShift Dev Spaces.
 ====
 
+[IMPORTANT]
+====
+In addition to the recommendations about calculating xref:calculating-che-resource-requirements.adoc.adoc[memory and CPU], make sure the storage size is enough to download and unpack JetBrains IDE. For the largest one, CLion, it requires about 8.5 GB of the disk space.
+====
+
 .Connecting JetBrains IntelliJ IDEA Ultimate Edition to a new workspace
 
 .Procedure
