--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -23,7 +23,7 @@ The `oc login` command establishes the authenticated session and saves the conne
 
 [IMPORTANT]
 ====
-In addition to the recommendations about calculating xref:calculating-che-resource-requirements.adoc.adoc[memory and CPU], make sure the storage size is enough to download and unpack JetBrains IDE. For the largest one, CLion, it requires about 8.5 GB of the disk space.
+In addition to the recommendations about calculating xref:administration-guide:calculating-che-resource-requirements.adoc[memory and CPU], make sure the storage size is enough to download and unpack the JetBrains IDE. For the largest one, CLion, it requires about 8.5 GB of disk space.
 ====
 
 .Connecting JetBrains IntelliJ IDEA Ultimate Edition to a new workspace
