--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -23,7 +23,7 @@ The `oc login` command establishes the authenticated session and saves the conne
 
 [IMPORTANT]
 ====
-In addition to the recommendations about calculating xref:administration-guide:calculating-che-resource-requirements.adoc[memory and CPU], make sure you have enough empty storage space to download and unpack the JetBrains IDE. For reference, CLion IDE, which is the largest of the IDEs, requires approximately 8.5 GB of disk space.
+In addition to the recommendations for calculating xref:administration-guide:calculating-che-resource-requirements.adoc[memory and CPU], ensure you have sufficient PVC size to download and unpack the JetBrains IDE. For reference, CLion IDE, which is the largest of the IDEs, requires approximately 8.5 GB of disk space.
 ====
 
 .Connecting JetBrains IntelliJ IDEA Ultimate Edition to a new workspace
