--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -21,6 +21,11 @@ Integration with the link:https://www.jetbrains.com/remote-development/gateway/[
 The `oc login` command establishes the authenticated session and saves the connection information to the configuration file which is read by the Gateway provider for OpenShift Dev Spaces.
 ====
 
+[IMPORTANT]
+====
+In addition to the recommendations for calculating xref:administration-guide:calculating-che-resource-requirements.adoc[memory and CPU], make sure you have sufficient PVC size to download and unpack the JetBrains IDE. For reference, CLion IDE, which is the largest of the IDEs, requires approximately 8.5 GB of disk space.
+====
+
 .Connecting JetBrains IntelliJ IDEA Ultimate Edition to a new workspace
 
 .Procedure
