--- a/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
+++ b/modules/administration-guide/pages/enabling-fuse-for-all-workspaces.adoc
@@ -38,7 +38,7 @@ For OpenShift versions before 4.15, the `io.openshift.podman-fuse: ""` annotatio
 [NOTE]
 ====
 The Universal Development Image (UDI) includes the following logic in the entrypoint script to detect fuse-overlayfs and set the storage driver.
-If using a custom image, equivalent logic should be added to the image's entrypoint.
+If you use a custom image, you should add an equivalent logic the image's entrypoint.
 
 [bash,subs="verbatim",options="nowrap"]
 ----
