--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -108,7 +108,7 @@ stringData:
 ----
 ====
 +
-.Replicate a Secret into every user {orch-namespace} and automatically mount a `trusted-certificates.crt` file into every user container by path `/etc/pki/ca-trust/source/anchors`:
+.Replicate a Secret into every user {orch-namespace} and automatically mount a `secret.data` file into every user container by path `/home/user/secrets`:
 ====
 [source,yaml,subs="+attributes,+quotes"]
 ----
@@ -122,14 +122,11 @@ metadata:
     app.kubernetes.io/component: workspaces-config
   annotations:
     controller.devfile.io/mount-as: subpath
-    controller.devfile.io/mount-path: /etc/pki/ca-trust/source/anchors
+    controller.devfile.io/mount-path: /home/user/secrets
 stringData:
-  trusted-certificates.crt: |
+  secret.data: |
     ...
 ----
-NOTE: Run `update-ca-trust` command on workspace startup to import certificates.
-It can be achieved manually or by adding this command to a `postStart` event in a devfile.
-See the link:https://devfile.io/docs/{devfile-api-version}/adding-event-bindings#post-start-object[Adding event bindings in a devfile].
 ====
 +
 .Replicate a Secret into every user {orch-namespace} and automatically mount as environment variables into every user container:
