Add deprecated info to the Azure oAuth page

--- a/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
@@ -18,6 +18,8 @@ pass:[<!-- vale RedHat.Spelling = YES -->]
 
 [IMPORTANT]
 OAuth 2.0 isn't supported on Azure DevOps Server, see link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[the documentation page].
+[IMPORTANT]
+Azure DevOps OAuth 2.0 is deprecated and no longer accepts new registrations, with full deprecation planned for 2026. See link:https://learn.microsoft.com/en-us/azure/devops/integrate/get-started/authentication/oauth?view=azure-devops[the documentation page].
 
 include::partial$proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc[leveloffset=+1]
 
