docs: adding community-supported info for Image Puller
Clarify that the image-puller is community-supported.

(cherry picked from commit b87df7eadd7c4921ded5179ad6d664812ce60f54)

--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -9,7 +9,7 @@
 = Caching images for faster workspace start
 
 To improve the start time performance of {prod-short} workspaces,
-use the {image-puller-name-short}, a {prod-short}-agnostic component that can be used
+use the {image-puller-name-short}, a community-supported {prod-short}-agnostic component that can be used
 to pre-pull images for {platforms-name} clusters.
 
 The {image-puller-name-short} is an
