--- a/modules/end-user-guide/pages/ides-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/ides-in-workspaces.adoc
@@ -26,18 +26,9 @@ The default IDE in a new workspace is Microsoft Visual Studio Code - Open Source
 * `latest` is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 * `insiders` is the development version.
 
-| link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition]
-| Deprecated
-|
-* `che-incubator/che-idea/latest`
-* `che-incubator/che-idea/next`
-|
-* `latest` is the stable version.
-* `next` is the development version.
-
 | link:https://github.com/redhat-developer/devspaces-gateway-plugin/[JetBrains IntelliJ IDEA Ultimate Edition
 (over JetBrains Gateway)]
-| Technology Preview
+| Available
 |
 * `che-incubator/che-idea-server/latest`
 * `che-incubator/che-idea-server/next`
