--- a/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide.adoc
@@ -38,18 +38,9 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?che-editor=__<editor_key>__
 * `latest` is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 * `insiders` is the development version.
 
-| link:https://github.com/che-incubator/jetbrains-editor-images[JetBrains IntelliJ IDEA Community Edition]
-| Deprecated
-|
-* `che-incubator/che-idea/latest`
-* `che-incubator/che-idea/next`
-|
-* `latest` is the stable version.
-* `next` is the development version.
-
 | link:https://github.com/redhat-developer/devspaces-gateway-plugin/[JetBrains IntelliJ IDEA Ultimate Edition
 (over JetBrains Gateway)]
-| Technology Preview
+| Available
 |
 * `che-incubator/che-idea-server/latest`
 * `che-incubator/che-idea-server/next`
