--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -7,7 +7,7 @@
 [id="configuring-a-user-namespace"]
 = Configuring a user namespace
 
-This procedure walks you through the process of using {prod-short}
+Learn how to use {prod-short}
 to synchronize `ConfigMaps`, `Secrets`, `PersistentVolumeClaim` and other {kubernetes} objects
 from `{prod-namespace}` namespace to numerous user-specific namespaces.
 The {prod-short} automates the synchronization of important configuration data such as
