--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -39,7 +39,7 @@ data:
 ====
 To enhance the configurability, you can customize the `ConfigMap` by adding additional labels and annotations.
 +
-Add the labels if you do not want the ConfigMap to be mounted automatically:
+Add the following labels if you do not want the ConfigMap to be mounted automatically:
 +
 [source,yaml,subs="+attributes,+quotes"]
 ----
