--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -10,7 +10,7 @@
 Learn how to use {prod-short}
 to synchronize `ConfigMaps`, `Secrets`, `PersistentVolumeClaim` and other {kubernetes} objects
 from `{prod-namespace}` namespace to numerous user-specific namespaces.
-The {prod-short} automates the synchronization of important configuration data such as
+The {prod-short} automates the synchronization of important configuration data, such as
 shared credentials, configuration files, and certificates to user namespaces.
 
 If you make changes to a {kubernetes} resource in an {prod-namespace} namespace,
