--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -85,7 +85,7 @@ spec:
           image: quay.io/devfile/universal-developer-image:ubi9-latest
           env:
             - name: CHE_DASHBOARD_URL
-              value: {prod-url}/dashboard/ <7>
+              value: pass:c,a,q[{prod-url}]/dashboard/ <7>
 ----
 <1> Name of the `DevWorkspace` custom resource. This will be the name of the new workspace.
 <2> User namespace, which is the target {orch-namespace} for the new workspace.
