--- a/modules/administration-guide/pages/security-best-practices.adoc
+++ b/modules/administration-guide/pages/security-best-practices.adoc
@@ -226,7 +226,7 @@ More details about link:https://docs.openshift.com/container-platform/4.14/appli
 .Network policies
 
 Network policies provide an additional layer of security by controlling network traffic between
-Pods in a {kubernetes} cluster. By default, every Pod can communicate with every other Pod and service on the cluster,
+Pods in a {kubernetes} cluster. By default, every pod can communicate with every other pod and service on the cluster,
 see link:https://docs.redhat.com/en/documentation/openshift_container_platform/{ocp4-ver}/html/networking_overview/index#about-openshift-sdn[OpenShift networking overview].
 
 Implementing network policies allows you to:
