--- a/modules/administration-guide/pages/security-best-practices.adoc
+++ b/modules/administration-guide/pages/security-best-practices.adoc
@@ -231,7 +231,7 @@ see link:https://docs.redhat.com/en/documentation/openshift_container_platform/{
 
 Implementing network policies allows you to:
 
-* Control ingress and egress traffic to and from workspace Pods
+* Control ingress and egress traffic to and from workspace pods
 * Limit the attack surface by denying unauthorized network access
 
 When configuring network policies for {prod},
