--- a/modules/administration-guide/pages/security-best-practices.adoc
+++ b/modules/administration-guide/pages/security-best-practices.adoc
@@ -235,7 +235,7 @@ Implementing network policies allows you to:
 * Limit the attack surface by denying unauthorized network access
 
 When configuring network policies for {prod},
-ensure that Pods in the {prod-short} namespace can still communicate with Pods in user namespaces,
+ensure that pods in the {prod-short} namespace can still communicate with pods in user namespaces,
 as this is required for proper functionality.
 
 For detailed instructions on implementing network policies with {prod}, see xref:configuring-network-policies.adoc[].
