chore: Add configuring nested containers article
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -54,6 +54,7 @@
 *** xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[]
 *** xref:configuring-workspaces-nodeselector.adoc[]
 *** xref:configuring-allowed-urls-for-cloud-development-environments.adoc[]
+*** xref:enabling-container-run-capabilities.adoc[]
 ** xref:caching-images-for-faster-workspace-start.adoc[]
 *** xref:installing-kubernetes-image-puller.adoc[]
 **** xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
