--- a/modules/administration-guide/pages/enabling-container-run-capabilities.adoc
+++ b/modules/administration-guide/pages/enabling-container-run-capabilities.adoc
@@ -14,7 +14,7 @@ images within their workspaces.
 
 [IMPORTANT]
 ====
-* Previously created workspaces cannot be started after enabling this feature. Users will need to create new workspaces.
+Previously created workspaces can not be started after enabling this feature. Users will need to create new workspaces.
 ====
 
 [IMPORTANT]
