--- a/modules/administration-guide/pages/enabling-container-run-capabilities.adoc
+++ b/modules/administration-guide/pages/enabling-container-run-capabilities.adoc
@@ -9,7 +9,7 @@
 
 You can enable container run capabilities in {prod-short} workspaces to
 allow running nested containers using tools like Podman. This feature leverages Linux kernel
-user namespaces for isolation, enabling users to build and run container
+user namespaces for isolation, so that users can build and run container
 images within their workspaces.
 
 [IMPORTANT]
