--- a/modules/administration-guide/pages/configuring-storage.adoc
+++ b/modules/administration-guide/pages/configuring-storage.adoc
@@ -12,7 +12,7 @@
 .Understanding supported storage protocols and requirements
 
 ====
-OpenShift Dev Spaces workspaces require storage with **volumeMode: FileSystem** because the development environment is designed to store project files, code, and configurations in a standard, hierarchical directory structure (such as /projects).
+{prod} workspaces require storage with **volumeMode: FileSystem** because the development environment is designed to store project files, code, and configurations in a standard, hierarchical directory structure (such as /projects).
 
 While Network File System (NFS) is one of the few protocols that natively supports the necessary **ReadWriteMany (RWX)** access mode for running concurrent workspaces (the Per-User strategy), standard {Kubernetes} NFS provisioning presents certain operational challenges:
 
