--- a/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
+++ b/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
@@ -11,14 +11,23 @@ This section describes all fields available to customize the `CheCluster` Custom
 
 * xref:a-minimal-checluster-custom-resource-example[]
 * xref:checluster-custom-resource-devEnvironments-settings[]
+** xref:checluster-custom-resource-devEnvironments-allowedSources-settings[]
+** xref:checluster-custom-resource-devEnvironments-containerBuildConfiguration-settings[]
+** xref:checluster-custom-resource-devEnvironments-containerRunConfiguration-settings[]
 ** xref:checluster-custom-resource-devEnvironments-defaultNamespace-settings[]
 ** xref:checluster-custom-resource-devEnvironments-defaultPlugins-settings[]
+** xref:checluster-custom-resource-devEnvironments-editorsDownloadUrls-settings[]
 ** xref:checluster-custom-resource-devEnvironments-gatewayContainer-settings[]
+** xref:checluster-custom-resource-devEnvironments-networking-settings[]
+*** xref:checluster-custom-resource-devEnvironments-networking-externalTLSConfig-settings[]
+** xref:checluster-custom-resource-devEnvironments-persistUserHome-settings[]
+** xref:checluster-custom-resource-devEnvironments-projectCloneContainer-settings[]
+** xref:checluster-custom-resource-devEnvironments-security-settings[]
 ** xref:checluster-custom-resource-devEnvironments-storage-settings[]
 *** xref:checluster-custom-resource-devEnvironments-storage-perUserStrategyPvcConfig-settings[]
 *** xref:checluster-custom-resource-devEnvironments-storage-perWorkspaceStrategyPvcConfig-settings[]
 ** xref:checluster-custom-resource-devEnvironments-trustedCerts-settings[]
-** xref:checluster-custom-resource-devEnvironments-containerBuildConfiguration-settings[]
+** xref:checluster-custom-resource-devEnvironments-user-settings[]
 * xref:checluster-custom-resource-components-settings[]
 ** xref:checluster-custom-resource-components-cheServer-settings[]
 *** xref:checluster-custom-resource-components-cheServer-proxy-settings[]
@@ -46,6 +55,7 @@ This section describes all fields available to customize the `CheCluster` Custom
 ****** xref:checluster-custom-resource-components-common-deployment-containers-resources-limits-settings[]
 ** xref:checluster-custom-resource-components-dashboard-settings[]
 *** xref:checluster-custom-resource-components-dashboard-headerMessage-settings[]
+*** xref:checluster-custom-resource-components-dashboard-branding-settings[]
 *** xref:checluster-custom-resource-components-common-deployment-settings[]
 **** xref:checluster-custom-resource-components-common-deployment-securityContext-settings[]
 **** xref:checluster-custom-resource-components-common-deployment-containers-settings[]
@@ -62,6 +72,7 @@ This section describes all fields available to customize the `CheCluster` Custom
 * xref:checluster-custom-resource-networking-settings[]
 ** xref:checluster-custom-resource-networking-auth-settings[]
 *** xref:checluster-custom-resource-networking-auth-gateway-settings[]
+*** xref:checluster-custom-resource-networking-auth-advancedAuthorization-settings[]
 **** xref:checluster-custom-resource-components-common-deployment-settings[]
 ***** xref:checluster-custom-resource-components-common-deployment-securityContext-settings[]
 ***** xref:checluster-custom-resource-components-common-deployment-containers-settings[]
