Improve visibility of JetBrains-only editor configuration warning
Convert the inline warning about JetBrains-only support for custom editor download URLs from plain text to an IMPORTANT admonition block to make it more prominent and noticeable for readers.

This helps prevent users from incorrectly applying this configuration to non-JetBrains editors in air-gapped environments.

--- a/modules/administration-guide/pages/configuring-editors-download-urls.adoc
+++ b/modules/administration-guide/pages/configuring-editors-download-urls.adoc
@@ -6,7 +6,12 @@
 [id="configuring-editors-download-urls"]
 = Configuring editors download URLs
 
-This procedure describes how to configure download URLs for editors. This feature is valuable in air-gapped environments where editors cannot be retrieved from the public internet. Currently, this option is intended only for JetBrains editors and should not be used for other editor types.
+This procedure describes how to configure download URLs for editors. This feature is valuable in air-gapped environments where editors cannot be retrieved from the public internet.
+
+[IMPORTANT]
+====
+This configuration option is currently supported only for JetBrains editors. Do not use this feature with other editor types.
+====
 
 .Prerequisites
 
