fix: Add required annotations to the vscode-editor-configurations ConfigMap
Signed-off-by: Roman Nikitenko <rnikiten@redhat.com>

--- a/modules/administration-guide/pages/manage-extension-installation.adoc
+++ b/modules/administration-guide/pages/manage-extension-installation.adoc
@@ -35,6 +35,10 @@ metadata:
   labels:
     app.kubernetes.io/component: workspaces-config
     app.kubernetes.io/part-of: che.eclipse.org
+  annotations:
+    controller.devfile.io/mount-as: file
+    controller.devfile.io/mount-path: /checode-config
+    controller.devfile.io/read-only: 'true'
   
 data:
   policy.json: |
@@ -73,6 +77,10 @@ metadata:
   labels:
     app.kubernetes.io/component: workspaces-config
     app.kubernetes.io/part-of: che.eclipse.org
+  annotations:
+    controller.devfile.io/mount-as: file
+    controller.devfile.io/mount-path: /checode-config
+    controller.devfile.io/read-only: 'true'
   
 data:
   policy.json: |
