Use subpath when mount policy.json
Signed-off-by: Roman Nikitenko <rnikiten@redhat.com>

--- a/modules/administration-guide/pages/manage-extension-installation.adoc
+++ b/modules/administration-guide/pages/manage-extension-installation.adoc
@@ -36,7 +36,7 @@ metadata:
     app.kubernetes.io/component: workspaces-config
     app.kubernetes.io/part-of: che.eclipse.org
   annotations:
-    controller.devfile.io/mount-as: file
+    controller.devfile.io/mount-as: subpath
     controller.devfile.io/mount-path: /checode-config
     controller.devfile.io/read-only: 'true'
   
@@ -78,7 +78,7 @@ metadata:
     app.kubernetes.io/component: workspaces-config
     app.kubernetes.io/part-of: che.eclipse.org
   annotations:
-    controller.devfile.io/mount-as: file
+    controller.devfile.io/mount-as: subpath
     controller.devfile.io/mount-path: /checode-config
     controller.devfile.io/read-only: 'true'
   
@@ -105,7 +105,7 @@ metadata:
     controller.devfile.io/mount-to-devworkspace: 'true'
     controller.devfile.io/watch-configmap: 'true'
   annotations:
-    controller.devfile.io/mount-as: file
+    controller.devfile.io/mount-as: subpath
     controller.devfile.io/mount-path: /checode-config
     controller.devfile.io/read-only: 'true'
 data:
