Fix AsciiDoc DocBook XML parsing errors

--- a/modules/administration-guide/partials/proc_configuring-number-of-replicas.adoc
+++ b/modules/administration-guide/partials/proc_configuring-number-of-replicas.adoc
@@ -25,7 +25,7 @@ spec:
     name: __<deployment_name>__ <1>
   ...
 ----
-<1> The `__<deployment_name>__` corresponds to the one following deployments:
+<1> The `<deployment_name>` corresponds to the one following deployments:
 * `{prod-deployment}`
 * `che-gateway`
 * `{prod-deployment}-dashboard`
