--- a/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-amazon-elastic-kubernetes-service.adoc
+++ b/modules/administration-guide/partials/proc_creating-lets-encrypt-certificate-for-che-on-amazon-elastic-kubernetes-service.adoc
@@ -121,7 +121,7 @@ spec:
                 name: cert-manager-acme-dns01-route53
 EOF
 ----
-<1> Replace `__<email_address>__` with your email address.
+<1> Replace `<email_address>` with your email address.
 
 . Create the {prod-namespace} namespace:
 +
