--- a/modules/administration-guide/pages/configuring-proxy.adoc
+++ b/modules/administration-guide/pages/configuring-proxy.adoc
@@ -65,7 +65,7 @@ In some proxy configurations, `localhost` may not translate to `127.0.0.1`. Both
 
 . Start a workspace
 
-. Verify that the workspace pod contains `HTTP_PROXY`, `HTTPS_PROXY`, `http_proxy` and `https_proxy` environment variables, each set to `__<protocol>__://<user>:<password@<domain>:<port>`.
+. Verify that the workspace pod contains `HTTP_PROXY`, `HTTPS_PROXY`, `http_proxy` and `https_proxy` environment variables, each set to `<protocol>://<user>:<password>@<domain>:<port>`.
 
 . Verify that the workspace pod contains `NO_PROXY` and `no_proxy` environment variables, each set to comma-separated list of non-proxy hosts.
 
