docs: Adding information about the openvsx rate limits and usage tiers
Added a warning about API usage tiers and rate limits for the Open VSX Registry.

--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -25,6 +25,11 @@ spec:
 +
 [WARNING]
 ====
+To ensure the stability and performance of the community-supported Open VSX Registry, API usage is organized into defined tiers. These limits are implemented by the Eclipse Foundation to protect infrastructure from high-frequency automated traffic and to provide consistent service quality for all users. More details about the link:https://github.com/EclipseFdn/open-vsx.org/wiki/rate-limiting[Rate Limits and Usage Tiers] can be found in the link:https://github.com/EclipseFdn/open-vsx.org/wiki[open-vsx.org wiki].
+====
++
+[WARNING]
+====
 Due to the dedicated Microsoft link:https://cdn.vsassets.io/v/M190_20210811.1/_content/Microsoft-Visual-Studio-Marketplace-Terms-of-Use.pdf[Terms of Use], link:https://marketplace.visualstudio.com/vscode[Visual Studio Code Marketplace] is not supported by {prod}.
 ====
 
